--- a/webshop-promotions-service/src/main/resources/application.properties
+++ b/webshop-promotions-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=promotions-service
 
 server.port=8082
 eureka.client.service-url.defaultZone=http://localhost:8089/eureka
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/db_promotions
+spring.datasource.username=db_promotions
+spring.datasource.password=Welkom.01
