--- a/webshop-inventory-service/src/main/resources/application.properties
+++ b/webshop-inventory-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=inventory-service
 
 server.port=8081
 eureka.client.service-url.defaultZone=http://localhost:8089/eureka
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/db_inventory
+spring.datasource.username=db_inventory
+spring.datasource.password=Welkom.01
