--- a/webshop-stores-service/src/main/resources/application.properties
+++ b/webshop-stores-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=stores-service
 
 server.port=8083
 eureka.client.service-url.defaultZone=http://localhost:8089/eureka
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/db_stores
+spring.datasource.username=db_stores
+spring.datasource.password=Welkom.01
