--- a/webshop-promotions-service/src/main/resources/application.properties
+++ b/webshop-promotions-service/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8082
 eureka.client.service-url.defaultZone=http://localhost:8089/eureka
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_promotions
+spring.datasource.url=jdbc:mysql://localhost:3306/db_promotions?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=db_promotions
 spring.datasource.password=Welkom.01
