--- a/webshop-stores-service/src/main/resources/application.properties
+++ b/webshop-stores-service/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8083
 eureka.client.service-url.defaultZone=http://localhost:8089/eureka
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_stores
+spring.datasource.url=jdbc:mysql://localhost:3306/db_stores?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=db_stores
 spring.datasource.password=Welkom.01
